--- a/cadastro.html
+++ b/cadastro.html
@@ -56,9 +56,14 @@
             </form>
         </div>
     </div>
-
     <!-- Rodapé -->
     <footer class="bg-dark text-white text-center py-4 mt-auto">
+        <a href="https://www.instagram.com/seu_usuario" target="_blank">
+            <img src="img/insta.png" alt="Siga-me no Instagram" style="width:50px;height:50px;">
+        </a>
+        <a href="https://wa.me/SEUNUMERO" target="_blank">
+            <img src="img/whats.png" alt="Enviar mensagem no WhatsApp" style="width:50px;height:50px;">
+        </a>
         <p>&copy; 2024 TrendShopp</p>
         <p>Author: Alex / Nicolas</p>
         <p>TrendShopp é o seu marketplace online inovador, projetado para conectar compradores e vendedores em uma
@@ -66,7 +71,6 @@
         <p>Contato: <a href="mailto:trendshopp@trendshopp.com.br" class="text-white">trendshopp@trendshopp.com.br</a></p>
         <p>Telefone: (11) xxxx-xxxx</p>
     </footer>
-
     <!-- Importando o JavaScript do Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
