--- a/login.html
+++ b/login.html
@@ -52,6 +52,12 @@
 
     <!-- Rodapé -->
     <footer class="bg-dark text-white text-center py-4 mt-auto">
+        <a href="https://www.instagram.com/seu_usuario" target="_blank">
+            <img src="img/insta.png" alt="Siga-me no Instagram" style="width:50px;height:50px;">
+        </a>
+        <a href="https://wa.me/SEUNUMERO" target="_blank">
+            <img src="img/whats.png" alt="Enviar mensagem no WhatsApp" style="width:50px;height:50px;">
+        </a>
         <p>&copy; 2024 TrendShopp</p>
         <p>Author: Alex / Nicolas</p>
         <p>TrendShopp é o seu marketplace online inovador, projetado para conectar compradores e vendedores em uma
